<resources>
    <string name="app_name">MovieCatalogue</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="item_separator" translatable="false">|</string>
    <string name="actor">Actor</string>
    <string name="director">Director</string>
    <string name="plot">Plot</string>
    <string name="imdb" translatable="false">IMDB</string>
    <string name="max_rating" translatable="false">/ 10</string>
    <string name="poster" translatable="false">Poster</string>
    <string name="default_rating" translatable="false">0.0</string>
    <string-array name="movie_poster">
        <item>@drawable/poster_a_start_is_born</item>
        <item>@drawable/poster_alita</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_infinity_war</item>
        <item>@drawable/poster_bohemian</item>

        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_crimes</item>
        <item>@drawable/poster_glass</item>
        <item>@drawable/poster_how_to_train</item>
        <item>@drawable/poster_mortal_engines</item>
    </string-array>
    <string-array name="movie_title">
        <item>A Star is Born</item>
        <item>Alita: Battle Angel</item>
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Bohemian Rhapsody</item>

        <item>Creed II</item>
        <item>Fantastic Beasts: The Crimes of Grindelwald</item>
        <item>Glass</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Mortal Engines</item>

        
    </string-array>
    <string-array name="movie_release_date">
        <item>5 Oct 2018</item>
        <item>14 Feb 2019</item>
        <item>21 Dec 2018</item>
        <item>27 Apr 2018</item>
        <item>2 Nov 2018</item>

        <item>21 Nov 2018</item>
        <item>16 Nov 2018</item>
        <item>18 Jan 2019</item>
        <item>22 Feb 2019</item>
        <item>14 Dec 2018</item>
    </string-array>
    <string-array name="movie_genre">
        <item>@string/genre_drama</item>
        <item>@string/genre_scifi</item>
        <item>@string/genre_action</item>
        <item>@string/genre_action</item>
        <item>@string/genre_biography</item>

        <item>@string/genre_drama</item>
        <item>@string/genre_fantasy</item>
        <item>@string/genre_thriller</item>
        <item>@string/genre_animation</item>
        <item>@string/genre_scifi</item>
    </string-array>
    <string-array name="movie_duration">
        <item>2h 16min</item>
        <item>2h 2min</item>
        <item>2h 23min</item>
        <item>2h 29min</item>
        <item>2h 14min</item>

        <item>2h 10min</item>
        <item>2h 14min</item>
        <item>2h 9min</item>
        <item>1h 44min</item>
        <item>2h 8min</item>
    </string-array>
    <string-array name="movie_rating">
        <item>7.7</item>
        <item>7.5</item>
        <item>7.1</item>
        <item>8.5</item>
        <item>8.0</item>

        <item>7.2</item>
        <item>6.6</item>
        <item>6.7</item>
        <item>7.6</item>
        <item>6.1</item>
    </string-array>
    <string-array name="movie_description">
        <item>@string/star_is_born_desc</item>
        <item>@string/alita_desc</item>
        <item>@string/aquaman_desc</item>
        <item>@string/avengers_desc</item>
        <item>@string/bohemian_desc</item>

        <item>@string/creed_desc</item>
        <item>@string/fantastic_desc</item>
        <item>@string/glass_desc</item>
        <item>@string/dragon_desc</item>
        <item>@string/mortal_desc</item>
    </string-array>
    <string-array name="movie_director">
        <item>Bradley Cooper</item>
        <item>Robert Rodriguez</item>
        <item>James Wan</item>
        <item>Anthony Russo, Joe Russo</item>
        <item>Bryan Singer</item>

        <item>Steven Caple Jr.</item>
        <item>David Yates</item>
        <item>M. Night Shyamalan</item>
        <item>Dean DeBlois</item>
        <item>Christian Rivers</item>
    </string-array>
    <string-array name="movie_actor">
        <item>Lady Gaga, Bradley Cooper, Sam Elliott</item>
        <item>Rosa Salazar, Christoph Waltz, Jennifer Connelly</item>
        <item>Jason Momoa, Amber Heard, Willem Dafoe</item>
        <item>Robert Downey Jr., Chris Hemsworth, Mark Ruffalo</item>
        <item>Rami Malek, Lucy Boynton, Gwilym Lee</item>

        <item>Michael B. Jordan, Sylvester Stallone, Tessa Thompson</item>
        <item>Eddie Redmayne, Katherine Waterston, Dan Fogler</item>
        <item>James McAvoy, Bruce Willis, Samuel L. Jackson</item>
        <item>Jay Baruchel, America Ferrera, F. Murray Abraham</item>
        <item>Hera Hilmar, Robert Sheehan, Hugo Weaving</item>
    </string-array>
    <string-array name="movie_plot">
        <item>@string/star_is_born_plot</item>
        <item>@string/alita_plot</item>
        <item>@string/aquaman_plot</item>
        <item>@string/avengers_plot</item>
        <item>@string/bohemian_plot</item>

        <item>@string/creed_plot</item>
        <item>@string/fantastic_plot</item>
        <item>@string/glass_plot</item>
        <item>@string/dragon_plot</item>
        <item>@string/mortal_plot</item>
    </string-array>
    <string name="star_is_born_desc">A musician helps a young singer find fame as age and alcoholism send his own career into a downward spiral.</string>
    <string name="star_is_born_plot">Seasoned musician Jackson Maine (Bradley Cooper) discovers-and falls in love with-struggling artist Ally (Gaga). She has just about given up on her dream to make it big as a singer - until Jack coaxes her into the spotlight. But even as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</string>
    <string name="alita_desc">A deactivated female cyborg is revived, but cannot remember anything of her past life and goes on a quest to find out who she is.</string>
    <string name="alita_plot">Alita is a creation from an age of despair. Found by the mysterious Dr. Ido while trolling for cyborg parts, Alita becomes a lethal, dangerous being. She cannot remember who she is, or where she came from. But to Dr. Ido, the truth is all too clear. She is the one being who can break the cycle of death and destruction left behind from Tiphares. But to accomplish her true purpose, she must fight and kill. And that is where Alita\'s true significance comes to bear. She is an angel from heaven. She is an angel of death.</string>
    <string name="aquaman_desc">Arthur Curry, the human-born heir to the underwater kingdom of Atlantis, goes on a quest to prevent a war between the worlds of ocean and land.</string>
    <string name="aquaman_plot">Arthur Curry, half human half from Atlantis, goes on a trip of a lifetime. Not only does this adventure compel him to come to terms with his real identity, but it also forces him to discover whether he is entirely worthy of fulfilling his own destiny: becoming a king.</string>
    <string name="avengers_desc">The Avengers and their allies must be willing to sacrifice all in an attempt to defeat the powerful Thanos before his blitz of devastation and ruin puts an end to the universe.</string>
    <string name="avengers_plot">As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment, the fate of Earth and existence has never been more uncertain.</string>
    <string name="bohemian_desc">The story of the legendary rock band Queen and lead singer Freddie Mercury, leading up to their famous performance at Live Aid (1985).</string>
    <string name="bohemian_plot">Bohemian Rhapsody is a foot-stomping celebration of Queen, their music and their extraordinary lead singer Freddie Mercury. Freddie defied stereotypes and shattered convention to become one of the most beloved entertainers on the planet. The film traces the meteoric rise of the band through their iconic songs and revolutionary sound. They reach unparalleled success, but in an unexpected turn Freddie, surrounded by darker influences, shuns Queen in pursuit of his solo career. Having suffered greatly without the collaboration of Queen, Freddie manages to reunite with his bandmates just in time for Live Aid. While bravely facing a recent AIDS diagnosis, Freddie leads the band in one of the greatest performances in the history of rock music. Queen cements a legacy that continues to inspire outsiders, dreamers and music lovers to this day.</string>
    <string name="creed_desc">Under the tutelage of Rocky Balboa, newly crowned heavyweight champion Adonis Creed faces off against Viktor Drago, the son of Ivan Drago.</string>
    <string name="creed_plot">Years after Adonis Creed made a name for himself under Rocky Balboa\'s mentorship, the young boxer becomes the Heavyweight Champion of the World. While life is good with that victory and his marriage to Bianca, trouble comes to Philadelphia when Ivan Drago, the Russian boxer who killed Adonis\' father, Apollo, arrives with his son, Viktor, to challenge Adonis. Against Rocky\'s advice, Adonis accepts the challenge without his mentor\'s participation and pays the price in a punishing bout he wins only by a technicality. Now injured and demoralized, Adonis cannot bring himself to back into the game, leaving his spirit and title in jeopardy. Together, Adonis\' family and Rocky must find a way to rekindle Adonis\' fighting spirit to face the future in whatever choice he makes. Meanwhile, the Drago family have its own troubles trying to regain the respect in their homeland that they lost at Rocky\'s hands as they wonder whether is it truly worth it.</string>
    <string name="fantastic_desc">The second installment of the "Fantastic Beasts" series featuring the adventures of Magizoologist Newt Scamander.</string>
    <string name="fantastic_plot">In an effort to thwart Grindelwald\'s plans of raising pure-blood wizards to rule over all non-magical beings, Albus Dumbledore enlists his former student Newt Scamander, who agrees to help, though he\'s unaware of the dangers that lie ahead. Lines are drawn as love and loyalty are tested, even among the truest friends and family, in an increasingly divided wizarding world.</string>
    <string name="glass_desc">Security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities.</string>
    <string name="glass_plot">After pursuing Kevin Wendell Crumb and the multiple identities that reside within. David Dunn finds himself locked in a mental hospital alongside his archenemy, Elijah Price and must contend with a psychiatrist who is out to prove the trio do not actually possess superhuman abilities</string>
    <string name="dragon_desc">When Hiccup discovers Toothless isn\'t the only Night Fury, he must seek "The Hidden World", a secret Dragon Utopia before a hired tyrant named Grimmel finds it first.</string>
    <string name="dragon_plot">As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless\' discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup\'s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</string>
    <string name="mortal_desc">In a post-apocalyptic world where cities ride on wheels and consume each other to survive, two people meet in London and try to stop a conspiracy.</string>
</resources>