<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/item_poster"
            android:layout_width="90dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/poster"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/poster_alita" />

        <TextView
            android:id="@+id/item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/item_poster"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Title" />

        <TextView
            android:id="@+id/item_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/item_title"
            app:layout_constraintTop_toBottomOf="@+id/item_title"
            tools:text="Action" />

        <TextView
            android:id="@+id/item_separator_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/item_separator"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/item_genre"
            app:layout_constraintTop_toTopOf="@id/item_genre" />

        <TextView
            android:id="@+id/item_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/item_separator_first"
            app:layout_constraintTop_toTopOf="@+id/item_genre"
            tools:text="2h 12m" />

        <TextView
            android:id="@+id/item_separator_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/item_separator"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/item_duration"
            app:layout_constraintTop_toTopOf="@id/item_genre" />

        <TextView
            android:id="@+id/item_release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/item_separator_second"
            app:layout_constraintTop_toTopOf="@+id/item_genre"
            tools:text="2 Jun 19" />

        <TextView
            android:id="@+id/item_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/item_title"
            app:layout_constraintTop_toBottomOf="@+id/item_genre"
            android:text="@string/default_rating" />

        <TextView
            android:id="@+id/item_max_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/max_rating"
            app:layout_constraintBottom_toBottomOf="@+id/item_rating"
            app:layout_constraintStart_toEndOf="@+id/item_rating"
            app:layout_constraintTop_toTopOf="@+id/item_rating" />

        <TextView
            android:id="@+id/item_imdb"
            android:layout_width="60dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/circle_corner"
            android:gravity="center"
            android:text="@string/imdb"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/item_max_rating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/item_max_rating"
            app:layout_constraintTop_toTopOf="@+id/item_max_rating" />

        <TextView
            android:id="@+id/item_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/item_title"
            app:layout_constraintTop_toBottomOf="@+id/item_rating"
            app:layout_constraintVertical_bias="0.0"
            tools:text="A deactivated female cyborg is revived, but cannot remember anything of her past life and goes on a quest to find out who she is." />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
